lib/src/compiler/tests/testdata/errors/59.out
error: wrong arguments
   ╭─[line:4:21]
   │
 4 │     test_proto2.head() == "foo"
   │                     ─┬  
   │                      ╰── wrong arguments in this call
   │ 
   │ Note: accepted argument combinations:
   │
   │       (integer)
───╯
